--- a/Stylesheets/homepage.css
+++ b/Stylesheets/homepage.css
@@ -4,17 +4,21 @@
 
 
 :root{
+	/* colors */
+	--background-color:#fafaee;
+	--text-color:#121212;
+
+	/* main typefaces */
 	--font-family-homepage:'Space Grotesk', serif;
 	--font-paragraph:font-family: "Roboto Mono", monospace;
 
 	/* font sizes */
-	--h1:font-size:5rem;
+	--h1:5rem;
 
 	/* colors */
 	--background-color:rgb(250, 250, 238);
 	--text-color:#121212;
 }
-
 
 /* general styles */
 
@@ -66,6 +70,17 @@ nav{
 	z-index:1; 
 	padding-left:1.5rem;
 	padding-right:1.5rem;
+}
+
+p{
+	font-family: var(--font-family-homepage);
+	font-size:1.3rem;
+	line-height:1.7rem;
+}
+
+p:nth-child(even){
+	padding-top:2rem;
+	padding-bottom:2rem;
 }
 
 /* hero section */
@@ -189,6 +204,20 @@ nav{
 	grid-row:1;
 	text-align:right;
 }
+
+#article-01{
+	background-color:#BDE662;
+}
+
+#article-02{
+	background-color:#f5a3de;
+}
+
+#article-03{
+	background-color:#BDE662;
+}
+]
+
 /* .cardlink-item2{
 	grid-row:2;
 } */
@@ -217,6 +246,20 @@ nav{
 footer{
 	color:white;
 }
+
+#colophon{
+	background-color:white;
+	outline: solid 2px var(--text-color);
+	border-radius:1rem;
+	padding:1.3rem;
+	margin:2rem;
+}
+
+#colophon h3{
+	font-family:var(--font-family-homepage);
+	font-size:2rem;
+}
+
 @media (min-width:950px){
 
 	.cards{
